# azdevops-cli

./: .dockerignore  .gitignore  .gitversion.yml  .pypirc  Dockerfile  LICENSE  README.md  azure_pipeline.yml  cli.py  pyproject.toml  requirements.txt  setup.py
scripts/: set-cli-version.py
src/: .coveragerc  cli.py  pyproject.toml  requirements.txt  setup.py
src/base/commands/cli/: cli_command.py  version_command.py
src/exceptions/: azdevops_api_exception.py  azdevops_exception.py
src/helpers/: azure_devops.py  envs.py  logger.py  strings.py
src/helpers/tests/: test_azure_devops.py
src/models/: azure_devops_credentials.py  azure_devops_definition.py  azure_devops_project.py  azure_devops_wiki.py  configuration.py  helper.py  release_info.py  release_summary.py  repository.py  version_infos.py  wiki.py
src/release_manager/: cli.py
src/release_manager/commands/cli/: changelog_command.py  manifest_command.py  summary_command.py
src/release_manager/exceptions/: release_manager_exception.py
src/release_manager/helpers/: changelog_generator.py  manifest_generator.py  os_util.py  summary_generator.py
src/release_manager/tests/helpers/: test_os_util.py
src/repo_updater/: cli.py  schema.py
src/repo_updater/commands/cli/: run_command.py
src/repo_updater/exceptions/: repo_updater_exception.py
src/repos_updater/: cli.py
src/repos_updater/exceptions/: repo_updater_exception.py
src/repos_updater/helpers/: files_actions.py
templates/add-tflint/: .tflint.hcl  config.yml  templates.tf
templates/example/: azure_pipeline.yml  config copy.yml  config.yml
(+27 files in other folders)
