[project]
name = "azdevops_cli"
version = "0.0.3"
authors = [
  { name="Gwendall Garnier" },
  { name="Damien Aicheh" },
]
description = "An Azure DevOps cli tool"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
"Homepage" = "https://github.com/damienaicheh/azdevops-cli"
"Bug Tracker" = "https://github.com/damienaicheh/azdevops-cli/issues"